crates/toml/tests/snapshots/invalid/ext/datetime/missing-date-time-sep.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 1997-09-0909:09:09
  |       ^^^^^^^^^^^^^^^^^^
invalid date, expected a two-digit day (DD)
